workingActivity complete (instruction parts need to be updated)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".WorkingActivity"
-            android:label="@string/title_activity_working"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".WorkingActivity"></activity>
     </application>
 
 </manifest>
