--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.1'
+    testCompile 'junit:junit:4.12'
     compile 'com.reimaginebanking.api:nessie-android-sdk:1.0.4'
     compile 'com.getpebble:pebblekit:3.1.0@aar'
+    compile 'com.google.android.gms:play-services-appindexing:9.6.1'
+    compile 'com.google.android.gms:play-services-location:9.6.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:design:24.2.1'
 }
